--- a/movies/templates/base_m.html
+++ b/movies/templates/base_m.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preload" as="image" href="{% static 'back.webp' %}">
     <link rel="icon" type="image/png" href="{% static 'fav96.png' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
 
