--- a/movies/templates/base_m.html
+++ b/movies/templates/base_m.html
@@ -42,7 +42,7 @@
                 {% if user.is_authenticated %}
                     <!-- username and logout button if user is logged in -->
                     <span class="me-2">
-                        Hello, <a href="{% url 'user_profile' user.id %}" style="color: inherit;">{{ user.username }}!</a>
+                        Hello, <a href="{% url 'profile' %}" style="color: inherit;">{{ user.username }}!</a>
                     </span>
                     {% if user|is_moderator %}
                         <a href="{% url 'moderation_dashboard' %}" class="btn btn-warning me-2">Moderation</a>
