--- a/movies/templates/moderation_dashboard.html
+++ b/movies/templates/moderation_dashboard.html
@@ -5,8 +5,20 @@
 {% block content %}
 <div class="container-fluid main-wrapper mt-5">
     <h2 class="mb-4">Moderation Dashboard</h2>
-    
-    <!-- user list -->
+
+    <!-- Search Form -->
+    <form method="get" class="mb-4">
+        <div class="row">
+            <div class="col-md-6">
+                <input type="text" name="search" class="form-control" placeholder="Search users by name or email" value="{{ search_query }}">
+            </div>
+            <div class="col-md-2">
+                <button type="submit" class="btn btn-secondary w-100">Search</button>
+            </div>
+        </div>
+    </form>
+
+    <!-- User Management -->
     <div class="card mb-4">
         <div class="card-body">
             <h5 class="card-title">User Management</h5>
@@ -40,10 +52,31 @@
                     {% endfor %}
                 </tbody>
             </table>
+
+            <!-- Pagination for Users -->
+            <nav>
+                <ul class="pagination">
+                    {% if users.has_previous %}
+                        <li class="page-item">
+                            <a class="page-link" href="?user_page={{ users.previous_page_number }}{% if search_query %}&search={{ search_query }}{% endif %}">Previous</a>
+                        </li>
+                    {% endif %}
+                    {% for page_num in users.paginator.page_range %}
+                        <li class="page-item {% if users.number == page_num %}active{% endif %}">
+                            <a class="page-link" href="?user_page={{ page_num }}{% if search_query %}&search={{ search_query }}{% endif %}">{{ page_num }}</a>
+                        </li>
+                    {% endfor %}
+                    {% if users.has_next %}
+                        <li class="page-item">
+                            <a class="page-link" href="?user_page={{ users.next_page_number }}{% if search_query %}&search={{ search_query }}{% endif %}">Next</a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </nav>
         </div>
     </div>
 
-    <!-- reviews list -->
+    <!-- Review Moderation -->
     <div class="card">
         <div class="card-body">
             <h5 class="card-title">Review Moderation</h5>
@@ -70,6 +103,27 @@
                     {% endfor %}
                 </tbody>
             </table>
+
+            <!-- Pagination for Reviews -->
+            <nav>
+                <ul class="pagination">
+                    {% if reviews.has_previous %}
+                        <li class="page-item">
+                            <a class="page-link" href="?review_page={{ reviews.previous_page_number }}{% if search_query %}&search={{ search_query }}{% endif %}">Previous</a>
+                        </li>
+                    {% endif %}
+                    {% for page_num in reviews.paginator.page_range %}
+                        <li class="page-item {% if reviews.number == page_num %}active{% endif %}">
+                            <a class="page-link" href="?review_page={{ page_num }}{% if search_query %}&search={{ search_query }}{% endif %}">{{ page_num }}</a>
+                        </li>
+                    {% endfor %}
+                    {% if reviews.has_next %}
+                        <li class="page-item">
+                            <a class="page-link" href="?review_page={{ reviews.next_page_number }}{% if search_query %}&search={{ search_query }}{% endif %}">Next</a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </nav>
         </div>
     </div>
 </div>
